--- a/exercicios/desafio012/style.css
+++ b/exercicios/desafio012/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Sriracha&family=Work+Sans:ital,wght@0,900;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Sriracha&family=Work+Sans:ital,wght@0,900;1,900&display=swap');
+
+:root {
+    --fonte1: verdana, geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-width: 100vh;
     background-color: darkgray;
+    font-family:var(--fonte1) ;
 }
 
 header {
@@ -20,10 +31,12 @@ header > h1 {
     padding-top: 50px;
     /*text-transform: uppercase;tag MAIUSCULA*/
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
-    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 header a, footer a {
@@ -40,6 +53,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -53,9 +68,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
-
 }
 
 footer {
